Thu Nov 20 20:24:04 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - board setup in .sgf files of rollouts only worked if
	  player 0 made first move, now appears to be correct for both
	  players and double by both players

Thu Nov 20 07:44:55 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c (EvalWidget): Add /* xgettext: no-c-format */ comment.

Wed Nov 19 19:52:16 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c gtkprefs.c gtkrace.c add some more I18n strings

Wed Nov 19 19:16:25 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* play.c - always output moves to stdout/message window

Wed Nov 19 16:35:25 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* htmlimages.c, play.c, progress.c, rollout.c:
	make CLI version compile, get rid of compiler warnings

Wed Nov 19 07:15:17 2003 Oystein Johansen <oystein@gnubg.org>

        * latex.c: use unicode and decrease size of board

Mon Nov 17 20:04:17 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkoptions.c: add GUI menu entry for Czech language

Sun Nov 16 10:56:59 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (DiceRolled): add call to ShowBoard for CLI.
	(reported by Achim)

Wed Nov 12 01:17:58 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.iss: New file for building MS-Windows installation archives
	             with Inno Setup.

Sat Nov  8 19:56:58 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* analysis.c - set up cubeinfo before analysis of a SET_DICE
	  moverecord.

Thu Nov  6 13:18:48 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* analysis.c - Stupid, stupid, stupid. My silly last minute change 
	  prevented cube analysis on any position except the initial one.
	  Arrgh.

Wed Nov  5 00:31:27 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* analysis.c - don't analyse cube if board is in initial position
	  (spurious annotations for not doubling when tutor mode was enabled)
	* gtkoptions.c - fix bug which crashed with invalid language option
